--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "api/todos.js",
+        "src": "/server.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "/api/todos",
-        "dest": "/api/todos.js"
+        "src": "/(.*)",
+        "dest": "/server.js"
       }
     ]
   }
